# hermes-pulpie

./: .gitignore  README.md  pulpie-browser  pyproject.toml
src/hermes_pulpie/: __init__.py
web/pulpie/: __init__.py  plugin.yaml  provider.py
